変更しました

--- a/sample/sample.html
+++ b/sample/sample.html
@@ -10,7 +10,7 @@
             <div class="header-logo">HIS</div>
             <div class="header-list">
                 <ul> <!--リストを作れる　中点でのやつ　インデント（字下げ）をする-->
-                    <li>トップページ</li>
+                    <li>トップページ!</li>
                     <li>国内旅行</li>
                     <li>海外旅行</li>
                 </ul>
